compiler/snapshots/nested-patterns.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling nested-patterns.wipple... done

stdout:
2
