compiler/snapshots/not.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling not.wipple... done

stdout:
True
