compiler/snapshots/number-units.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling number-units.wipple... done

stdout:
True
