compiler/snapshots/operator-without-parentheses.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling operator-without-parentheses.wipple... done
Error: compilation failed with 2 feedback item(s)

stdout:

Feedback:

`+` (compiler/tests/operator-without-parentheses.wipple:3:8-3:9) (error-instance):

  Missing parentheses around the inputs to `+`.

 Spaces group before operators do, so you need to put parentheses around just
 the inputs to `+`.

  

`+` (compiler/tests/operator-without-parentheses.wipple:5:9-5:10) (error-instance):

  Can't add   `1` (compiler/tests/operator-without-parentheses.wipple:5:7-5:8) and   `"hi"` (compiler/tests/operator-without-parentheses.wipple:5:11-5:15).

 Adding these two items together isn't supported.
