compiler/snapshots/or-pattern.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling or-pattern.wipple... done

stdout:
yay
