compiler/snapshots/parse_as_expression.snap
---
source: compiler/src/syntax/mod.rs
description: x as T
expression: result
---
AsExpressionNode {
    left: VariableExpressionNode {
        variable: "x",
    },
    right: NamedTypeNode {
        name: "T",
        parameters: [],
    },
}
