compiler/snapshots/parse_block_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "{foo}"
expression: result
---
BlockExpressionNode {
    statements: [
        ExpressionStatementNode {
            expression: VariableExpressionNode {
                variable: "foo",
            },
        },
    ],
}
