compiler/snapshots/parse_block_type.snap
---
source: compiler/src/syntax/mod.rs
description: "{Number}"
expression: result
---
BlockTypeNode {
    output: NamedTypeNode {
        name: "Number",
        parameters: [],
    },
}
