compiler/snapshots/parse_bound_constraint.snap
---
source: compiler/src/syntax/mod.rs
description: (Foo value)
expression: result
---
BoundConstraintNode {
    trait_name: "Foo",
    parameters: [
        TypeParameterNode {
            name: "value",
            infer: false,
            value: None,
        },
    ],
}
