compiler/snapshots/parse_complex_constructor_pattern.snap
---
source: compiler/src/syntax/mod.rs
description: Some x y z
expression: result
---
ConstructorPatternNode {
    constructor: "Some",
    elements: [
        VariablePatternNode {
            variable: "x",
        },
        VariablePatternNode {
            variable: "y",
        },
        VariablePatternNode {
            variable: "z",
        },
    ],
}
